@@ -48,7 +48,7 @@
 		<hadoop.scope>compile</hadoop.scope>
 		<zookeeper.version>3.4.6</zookeeper.version>
 		<jersey.version>2.14</jersey.version>
-		<kafka.artifact>kafka_2.10</kafka.artifact>
+		<kafka.artifact>kafka_2.11</kafka.artifact>
 		<kafka.version>0.8.2.1</kafka.version>
 		<snappy.version>1.0.5</snappy.version>
 		<jcommander.version>1.48</jcommander.version>
@@ -63,12 +63,14 @@
 		<jacoco.ut.reportPath>${project.build.directory}/coverage-reports/jacoco-ut.exec</jacoco.ut.reportPath>
 		<it.reportPath>${project.reporting.outputDirectory}/jacoco-it</it.reportPath>
 		<ut.reportPath>${project.reporting.outputDirectory}/jacoco-ut</ut.reportPath>
-		<sonar.jacoco.reportPath>${ut.reportPath}</sonar.jacoco.reportPath>
-		<sonar.jacoco.itReportPath>${it.reportPath}</sonar.jacoco.itReportPath>
+		<sonar.jacoco.reportPath>${jacoco.ut.reportPath}</sonar.jacoco.reportPath>
+		<sonar.jacoco.itReportPath>${jacoco.it.reportPath}</sonar.jacoco.itReportPath>
+		<surefire.report.path>${basedir}/target/surefire-reports</surefire.report.path>
+		<sonar.junit.reportsPath>${surefire.report.path}</sonar.junit.reportsPath>
 		<jacoco.version>0.7.4.201502262128</jacoco.version>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<test.args>-Xms256m -Xmx1024m -XX:MaxPermSize=256m</test.args>
+		<test.args>-XX:CompressedClassSpaceSize=256m -XX:+UseSerialGC -Xms1g -Xmx2g -XX:MaxMetaspaceSize=256m</test.args>
 		<findbugs.version>3.0.1</findbugs.version>
 		<findbugs.omitVisitors>MutableStaticFields,FindReturnRef</findbugs.omitVisitors>
 		<findbugs.effort>Max</findbugs.effort>
@@ -191,6 +193,11 @@
 			<dependency>
 				<groupId>org.apache.hbase</groupId>
 				<artifactId>hbase-client</artifactId>
+				<version>${hbase.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.hbase</groupId>
+				<artifactId>hbase-server</artifactId>
 				<version>${hbase.version}</version>
 			</dependency>
 			<dependency>
@@ -473,6 +480,15 @@
 					<artifactId>formatter-maven-plugin</artifactId>
 					<version>0.5.2</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.hadoop</groupId>
+					<artifactId>hadoop-maven-plugins</artifactId>
+					<version>${hadoop.version}</version>
+					<configuration>
+						<protocVersion>2.5.0</protocVersion>
+						<protocCommand>/Apps/Protoc/bin/protoc</protocCommand>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -597,6 +613,7 @@
 						<exclude>**IT.java</exclude>
 						<exclude>**/*ITSuite.java</exclude>
 					</excludes>
+					<outputDirectory>${surefire.report.path}</outputDirectory>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -605,6 +622,7 @@
 				<version>2.9.1</version>
 				<configuration>
 					<notimestamp>true</notimestamp>
+					<additionalparam>${javadoc.opts}</additionalparam>
 				</configuration>
 				<executions>
 					<execution>
@@ -617,7 +635,6 @@
 							<sourceFileIncludes>
 								<include>**.java</include>
 							</sourceFileIncludes>
-							<additionalparam>${javadoc.opts}</additionalparam>
 							<quiet>true</quiet>
 							<windowtitle>GeoWave ${project.version}</windowtitle>
 							<doctitle>GeoWave ${project.version}</doctitle>
@@ -697,7 +714,7 @@
 					<dependency>
 						<groupId>mil.nga.giat</groupId>
 						<artifactId>geowave-dev-resources</artifactId>
-						<version>1.0</version>
+						<version>1.1</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -772,6 +789,17 @@
 			<url>http://maven.geo-solutions.it</url>
 		</repository>
 		<repository>
+			<id>geowave-maven-snapshots</id>
+			<name>GeoWave AWS Snapshots Repository</name>
+			<url>http://geowave-maven.s3-website-us-east-1.amazonaws.com/snapshot</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
 			<id>geowave-maven-releases</id>
 			<name>GeoWave AWS Release Repository</name>
 			<url>http://geowave-maven.s3-website-us-east-1.amazonaws.com/release</url>
@@ -804,6 +832,8 @@
 				<artifactId>findbugs-maven-plugin</artifactId>
 				<version>${findbugs.version}</version>
 				<configuration>
+					<maxHeap>256</maxHeap>
+					<jvmArgs>${test.args}</jvmArgs>
 					<findbugsXmlOutput>true</findbugsXmlOutput>
 					<xmlOutput>true</xmlOutput>
 					<effort>${findbugs.effort}</effort>
